--- a/assets/transitions.css
+++ b/assets/transitions.css
@@ -7,6 +7,17 @@
     opacity: 0;
 }
 
+.slide-up-enter-active,
+.slide-up-leave-active {
+    transition: opacity 1s, transform 1.2s;
+}
+.slide-up-enter,
+.slide-up-leave-active {
+    opacity: 0;
+    transform: translateY(10vh);
+}
+
+
 @media (prefers-reduced-motion: reduce) {
     .page-enter-active,
     .page-leave-active {
