--- a/assets/animations.css
+++ b/assets/animations.css
@@ -1,5 +1,4 @@
 /* Slide in from LEFT */
-
 @keyframes fadeslidefromleft {
     from {
         transform: translateX(-10vw);
@@ -11,9 +10,7 @@
         opacity: 1;
     }
 }
-
 /* Slide in from RIGHT */
-
 @keyframes fadeslidefromright {
     from {
         transform: translateX(10vw);
@@ -25,9 +22,7 @@
         opacity: 1;
     }
 }
-
 /* Slide in from TOP */
-
 @keyframes fadeslidefromtop {
     from {
         transform: translateY(-5vw);
@@ -39,9 +34,7 @@
         opacity: 1;
     }
 }
-
 /* Slide in from BOTTOM */
-
 @keyframes fadeslidefrombottom {
     from {
         transform: translateY(5vw);
@@ -55,10 +48,24 @@
 }
 
 /* Drive in from left */
-
 @keyframes driveinfromleft {
     0% {
         transform: translateX(-10vw);
+        opacity: 0;
+    }
+
+    20% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+/* Drive in from right */
+@keyframes driveinfromright {
+    0% {
+        transform: translateX(10vw);
         opacity: 0;
     }
 
@@ -88,6 +95,11 @@
 
 .drive-in-from-left {
     animation-name: driveinfromleft;
-    animation-duration: 1s;
-    animation-timing-function: ease;
+    animation-duration: 2s;
+    animation-timing-function: cubic-bezier(0.81, -0.04, 0.495, 0.975);
+}
+.drive-in-from-right {
+    animation-name: driveinfromright;
+    animation-duration: 2s;
+    animation-timing-function: cubic-bezier(0.81, -0.04, 0.495, 0.975);
 }
