--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
-@import "./animations.css";
-@import "./transitions.css";
+@import "./css/animations.css";
+@import "./css/transitions.css";
 
 body {
     @apply bg-primary-900 text-primary-50 overflow-x-hidden;
