--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,7 @@
 
 @import "./css/animations.css";
 @import "./css/transitions.css";
+@import "./css/flags.css";
 
 body {
     @apply bg-primary-900 text-primary-50 overflow-x-hidden;
